# soldat-libposixmq

./: CMakeLists.txt  README.md
example/: example.py
example/scripts/libposixmq_test/: config.ini  main.pas
include/: libposixmq.pas
src/: posixmq.cpp
